--- a/src/index.html
+++ b/src/index.html
@@ -16,19 +16,17 @@
 
   <base href="/">
 
-  <link rel="icon" type="image/x-icon" href="assets/img/appicon.png">
+  <link rel="icon" type="image/x-icon" href="assets/img/Urban-Hawks-logo.png">
   <link rel="manifest" href="assets/manifest.json">
 
-  <link rel="apple-touch-icon" href="assets/img/appicon.png">
+  <link rel="apple-touch-icon" href="assets/img/Urban-Hawks-logo.png">
 
   <script>
-    /*
-     * if ('serviceWorker' in navigator) {
-     *   navigator.serviceWorker.register('service-worker.js')
-     *     .then(() => console.log('service worker installed'))
-     *     .catch(err => console.log('Error', err));
-     * }
-     */
+    // if ('serviceWorker' in navigator) {
+    //   navigator.serviceWorker.register('service-worker.js')
+    //     .then(() => console.log('service worker installed'))
+    //     .catch(err => console.log('Error', err));
+    // }
   </script>
 </head>
 
