--- a/src/index.html
+++ b/src/index.html
@@ -25,7 +25,7 @@
     if ('serviceWorker' in navigator) {
       navigator.serviceWorker.register('service-worker.js')
         .then(() => console.log('service worker installed'))
-        .catch(err => console.log('Error', err));
+        .catch(err => (!window.location.hostname === "localhost") ? console.log('Error', err) : null);
     }
   </script>
 </head>
